Insert background and buttons in register.html and index.html

--- a/Activity_01/main.css
+++ b/Activity_01/main.css
@@ -25,10 +25,18 @@
 
 main{
     margin-top: 30px; /*add to pamrgin */
+    
 }
 
 h4{
     color: darkslategray;
     font-family: sans-serif;
+    
+}
+
+body{
+    background: url(logo.jpg) no-repeat center top fixed;
+    background-size: cover;
+    
     
 }
