edit the background-image (opacity)

--- a/Activity_01/main.css
+++ b/Activity_01/main.css
@@ -35,8 +35,8 @@ h4{
 }
 
 body{
-    background: url(logo.jpg) no-repeat center top fixed;
+    background: url(logo.png) no-repeat center top fixed;
     background-size: cover;
     
-    
 }
+
