Finishing the project Stage-1

--- a/Activity_01/main.css
+++ b/Activity_01/main.css
@@ -63,8 +63,8 @@ tr:nth-child(even){
 }
 
 tr:hover{
-    background-color: darkgray;
-    color: whitesmoke;
+    background-color: aliceblue;
+    color: darkcyan;
 }
 
 
