--- a/Activity_02/main.css
+++ b/Activity_02/main.css
@@ -35,8 +35,10 @@ h4{
 }
 
 body{
-    background: url(logo1.jpg) no-repeat center top fixed;
-    background-size: cover;   
+    /*background: url(logo1.jpg) no-repeat center */
+    top fixed;
+    background-size: cover;
+    background-color: burlywood;
 }
 
 table{
