--- a/Activity_02/main.css
+++ b/Activity_02/main.css
@@ -1,12 +1,12 @@
-.navbar{
+/*.navbar{
     overflow: hidden;
     background-color: #333;
     position: fixed;
-    top: 0; /*position of menu at the top of the page*/
+    top: 0; /*position of menu at the top of the page
     width: 100%;
 }
 
-/*links inside the navbar*/
+/*links inside the navbar
 .navbar a{
     float: left;
     display: block;
@@ -17,12 +17,12 @@
     font-family: sans-serif;
 }
 
-/*change background on mouse-over*/
+/*change background on mouse-over
 .navbar a:hover{
     background: #ddd;
     color: cornflowerblue;
 }
-
+*/
 main{
     margin-top: 30px; /*add to pamrgin */
     
@@ -38,7 +38,7 @@ body{
     /*background: url(logo1.jpg) no-repeat center */
     top fixed;
     background-size: cover;
-    background-color: burlywood;
+ 
 }
 
 table{
@@ -71,7 +71,7 @@ tr:hover{
 
 h2{
     font-family: monospace;
-    s
+    
 }
 
 
