--- a/Activity_02/main.css
+++ b/Activity_02/main.css
@@ -17,7 +17,7 @@ body_back{
  
 }
 
-table{
+/*table{
     border: 1px solid gray;
     border-collapse: collapse;
     text-align: center;
@@ -44,7 +44,7 @@ tr:hover{
     background-color: aliceblue;
     color: darkcyan;
 }
-
+*/
 h2{
     font-family: monospace;
 }
