Etapa 2 pasta IMC

--- a/CS1477-2018-02-atividade-pratica-001/IMC/main.css
+++ b/CS1477-2018-02-atividade-pratica-001/IMC/main.css
@@ -10,3 +10,13 @@
 input{
 	width: 200px;
 }
+
+.tr_design{
+
+	background-color: #FFF961;
+	font-weight: bold;
+}
+
+.th_design{
+	text-align: center;
+}
