--- a/Final_Test/LaravelTest/public/css/main.css
+++ b/Final_Test/LaravelTest/public/css/main.css
@@ -6,44 +6,9 @@ html, body {
     height: 100vh;
     margin: 0;
 }
-/*
-.full-height {
-    height: 50vh;
-}
-
-.flex-center {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.position-ref {
-    position: relative;
-}
-
-.top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
-}
-
-.content {
-    text-align: center;
-}
-
-.title {
-    font-size: 60px;
-} */
 
 .a-links {
-    //color: #636b6f;
-    //padding: 0 25px;
     font-size: 20px;
-    //border-top: 10px;
-    //font-weight: 600;
-    //letter-spacing: .1rem;
-    //text-decoration: none;
-    //text-transform: uppercase;
 }
 .div-content{
   padding: 15px;
@@ -61,9 +26,6 @@ html, body {
 .p-padding{
   padding: 15px;
 }
-/* .m-b-md {
-    margin-bottom: 5px;
-}
 
 .navbar-main{
   padding-top: 0px;
@@ -72,5 +34,12 @@ html, body {
 }
 
 .jumbotron-main{
-  padding-bottom: 0px;
-} */
+  padding-top: 10px;
+}
+
+.div-adm{
+  padding-top: 50px;
+}
+.label-pad{
+  padding: 10px;
+}
