--- a/Final_Test/LaravelTest/public/css/main.css
+++ b/Final_Test/LaravelTest/public/css/main.css
@@ -47,13 +47,13 @@ html, body {
 
 .container  {
   display: flex;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 150;
   left: 50;
   height: 100%;
   width: 100%;
 }
 
-.container .row {
+/* .container .row {
   margin: 0 auto;
-}
+} */
